--- a/quize-app/package.json
+++ b/quize-app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "prebuild": "npm install",
     "lint": "eslint .",
     "preview": "vite preview"
   },
